--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite --base /",
+    "build": "vite build --base /tp-dbnet/",
+    "preview": "vite preview --base /tp-dbnet/"
   },
   "dependencies": {
     "onnxruntime-web": "^1.19.2"
